--- a/tender-home/index.html
+++ b/tender-home/index.html
@@ -35,7 +35,7 @@
                             <button class="btn-close text-reset" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></button>
                         </div>
 
-                        <ul class="navbar-nav ms-lg-auto">
+                        <ul class="navbar-nav ms-lg-auto pe-lg-2">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">How it Works</a>
                             </li>
@@ -45,7 +45,7 @@
                         </ul>
                         <div class="d-lg-inline-flex align-items-center justify-content-end flex-1 mt-auto mt-lg-0">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#modal-login" class="btn btn-outline-primary bw-2">Login</a>
-                            <a href="#" class="btn btn-primary bw-2 mt-10 mt-lg-0 ms-lg-10">Sign Up</a>
+                            <a href="#" class="btn btn-primary bw-2 mt-10 mt-lg-0 ms-lg-14">Sign Up</a>
                         </div>
                     </div>
                 </div>
@@ -59,12 +59,12 @@
                 <div class="lg-xs bg-white shadow-lg rounded-3 mx-auto position-relative overflow-hidden">
                 	<section class="px-3 px-lg-7 section-1">
                         <div class="row align-items-center">
-                            <div class="col-md-6">
-                                <div class="mb-3 mb-sm-3 pb-sm-3 mb-lg-4 pb-lg-4">
-                                    <h1 class="display-1 fw-bolder mb-0">
+                            <div class="col-md-6 col-lg-5">
+                                <div class="mb-3 mb-sm-3 pb-sm-3 mb-lg-4 pb-lg-3 mt-lg-7">
+                                    <h1 class="display-1 fw-bolder mb-1">
                                         ZoomTender 
                                     </h1>
-                                    <p class="fw-600 fs-4">
+                                    <p class="fw-600 fs-4 mb-0">
                                         is an End-to-End E-Tender Management Platform
                                     </p>
                                 </div>
@@ -74,7 +74,7 @@
                                 </a>
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-lg-7">
                                 <img src="home/img-1.png" alt="" class="img-fluid">
                             </div>
                         </div>   
@@ -85,33 +85,33 @@
                             <div class="col-sm-4">
                                 <div class="bg-white shadow rounded-3 p-3 d-flex align-items-center justify-content-center">
                                     <img src="home/icon-1.svg" alt="">
-                                    <span class="fw-600 ms-2">Fast</span>
+                                    <span class="fw-600 ms-2 fs-5-2">Fast</span>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="bg-white shadow rounded-3 p-3 d-flex align-items-center justify-content-center">
                                     <img src="home/icon-2.svg" alt="">
-                                    <span class="fw-600 ms-2">Paperless</span>
+                                    <span class="fw-600 ms-2 fs-5-2">Paperless</span>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="bg-white shadow rounded-3 p-3 d-flex align-items-center justify-content-center">
                                     <img src="home/icon-3.svg" alt="">
-                                    <span class="fw-600 ms-2">Eliminate Fraud</span>
+                                    <span class="fw-600 ms-2 fs-5-2">Eliminate Fraud</span>
                                 </div>
                             </div>
                         </div>
                     </section>
 
                     <section class="px-3 px-lg-7 section-3 bg-light">
-                        <div class="row align-items-center">
-                            <div class="col-md-6">
+                        <div class="row align-items-center justify-content-lg-end">
+                            <div class="col-md-6 col-lg-5 pb-lg-2 ps-lg-32">
                                 <div class="mb-3 mb-lg-5">
                                     <h2 class="display-2 fw-bolder mb-2 mb-lg-3">
                                         Are you an Employer?
                                     </h2>
                                     <p class="fs-4-2 fw-500 mb-0">
-                                        User ZoomTender to invite e-tenders and get the best rates!
+                                        User ZoomTender to <br>invite e-tenders and get <br> the best rates!
                                     </p>
                                 </div>
                                 <a href="#" class="btn btn-primary bw-2">
@@ -119,15 +119,15 @@
                                 </a>
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-lg-6">
                                 <img src="home/img-2.png" alt="" class="img-fluid">
                             </div>
                         </div> 
                     </section>
 
                     <section class="px-3 px-lg-7 section-4">
-                        <div class="row align-items-center flex-sm-row-reverse">
-                            <div class="col-md-6">
+                        <div class="row align-items-center flex-sm-row-reverse g-2">
+                            <div class="col-md-6 col-lg-5">
                                 <div class="mb-3 mb-lg-5">
                                     <h2 class="display-2 fw-bolder mb-2 mb-lg-3">
                                         Are you a Contractor?
@@ -141,8 +141,8 @@
                                 </a>
                             </div>
 
-                            <div class="col-md-6">
-                                <img src="home/img-3.png" alt="" class="img-fluid">
+                            <div class="col-md-6 col-lg-7">
+                                <img src="home/img-3.png" alt="" class="img-fluid d-block ms-lg-auto">
                             </div>
                         </div> 
                     </section>
